[tool.poetry]
name = "python-bloons-automator"
version = "0.1.0"
description = "Bloons TD6 automator"
authors = ["Tashreeq Peck <tashreeq.peck@gmail.com>"]
readme = "README.md"
packages = [{include = "python_bloons_automator"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pyautogui = "^0.9.54"
opencv-python = "^4.8.1.78"
pytesseract = "^0.3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pylint = "^3.0.2"
black = "^23.12.0"
pytest = "^7.4.3"


[tool.poetry.group.types.dependencies]
types-pyautogui = "^0.9.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
